--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -76,7 +76,7 @@ span {
   top: 0px;
   background-color: white;
   border-bottom: 1px solid #6975cf;
-  z-index: 1;
+  z-index: 5;
 }
 @media screen and (max-width: 1300px) {
   .nav {
@@ -215,7 +215,6 @@ span {
   visibility: collapse;
   position: absolute;
   top: 200px;
-  z-index: 1;
   right: 0;
   background-color: white;
   text-align: center;
@@ -226,7 +225,7 @@ span {
   margin: 0;
 }
 #dropdown_button > nav a {
-  padding: 15px;
+  padding: 10px;
   display: block;
   font-size: 16px;
   transition: font-size 50ms;
@@ -252,11 +251,8 @@ span {
   #dropdown_button > nav {
     width: 100%;
   }
-  #dropdown_button > nav li {
-    padding: 5px;
-  }
   #dropdown_button > nav li a:first-child::after {
-    top: 60px;
+    top: 50px;
   }
 }
 #dropdown_button .dropdown_savoir {
@@ -630,7 +626,7 @@ footer ul a:hover span {
   #pourquoi #reading_woman {
     width: 40%;
     top: -4%;
-    z-index: 4;
+    z-index: 2;
   }
 }
 #pourquoi .pourquoi_paragraphe {
