--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -216,7 +216,7 @@
         @include breakpoint-mobile_small {
             width: 40%;
             top: -4%;
-            z-index: 4;
+            z-index: 2;
         }
     }
     .pourquoi_paragraphe {
